fix update broken layout

--- a/src/assets/css/movie.scss
+++ b/src/assets/css/movie.scss
@@ -3,11 +3,10 @@
 #movie_thumnail{
     background: url('../../assets/img/poster-slider-background.jpg');
     background-size: cover;
-    max-height: 600px;
     &::before {
         content: '';
         width: 100%;
-        height: 600px;
+        height: 100%;
         position: absolute;
         top: 0;
         background: linear-gradient(180deg, rgba(0, 0, 0, 0.55) 0%, rgba(0, 0, 0, 0.41) 10.94%, rgba(0, 0, 0, 0.1) 23.44%, rgba(0, 0, 0, 0) 27.08%, rgba(0, 0, 0, 0) 60.42%, rgba(0, 0, 0, 0.3) 69.27%, rgba(0, 0, 0, 0.7) 84.37%, #000000 100%), rgba(0, 0, 0, 0.3);
